# cube_model

./: README.md  pyproject.toml
src/rubik_cube_model/: __init__.py  action.py  model.py  move.py  navigation.py  reachable.py  rotate.py
tests/: test_action.py
