[tool.poetry]
name = "rubik-cube-model"
version = "0.1.0"
description = "Orientation-independent Rubik cube model in strictly typed Python"
authors = ["Yitzchak Gale <gale@sefer.org>"]
readme = "README.md"
packages = [{ include = "rubik_cube_model", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
